# Zchat

./: .gitignore  Procfile  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render  render.pub  requirements.txt
base/: admin.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_room_remove_roommember_room_name_roommember_room.py
base/templates/base/: lobby.html  main.html  room.html
static/js/: lobby.js  streams.js
static/styles/: main.css
staticfiles/js/: lobby.js  streams.js
vdchat/: asgi.py  settings.py  urls.py  wsgi.py
