[tool.poetry]
name = "zchat-dev"
version = "0.1.0"
description = ""
authors = ["Zubayer Rahaman <zubayer.skd@gmail.com>"]
readme = "README.md"
packages = [{include = "zchat_dev"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.0"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
agora-token-builder = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
